networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__all__ingress-apisix__ingress__ports__ingress-apisix__nr56__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-apisix--all--ingress-apisix--ingress--ports--ingress-apisix--nr56
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: ingress-apisix
